--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://unpkg.com/@tailwindcss/typography@0.2.x/dist/typography.min.css");
+@import url("https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap");
+
+.cursive {
+  font-family: "Amatic SC", cursive;
+  font-weight: 700;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.prose img {
+  margin-left :auto;
+  margin-right: auto;
+  border-radius: 5px;
 }
+
+.home-name {
+  
+  font-size : 150px;
+}
+
+.about-name {
+  font-size : 100px;
+
+}
+
+.content-container {
+  display: inline-block; 
+  transition: transform 0.3s ease; 
+  margin: 1rem; 
+  transform-origin: center bottom; 
+}
+
+.content-container:hover {
+  transform: scale(1.1); 
+}
+
+.image-style {
+  display: block; 
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  margin-bottom: 1rem; 
+}
+
+.text-below {
+  text-align: center; 
+  display: block; 
+}
+
+.enlarge-on-hover:hover {
+  transform: scale(1.1); /* This value can be adjusted to control the amount of scaling */
+  transition: transform 0.2s; /* Smooth transition for the scaling */
+}
+
+
